--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -5,7 +5,7 @@
 <body>
     <h1>Posts</h1>
     {% for post in posts %}
-        <p>Title: {{ post.title }}</p>
+        <a href="{% url 'post-detail' post.id%}">{{ post.title }}</a>
         <p>Content: {{ post.content }}</p>
 
     {% endfor %}
