--- a/templates/post_details.html
+++ b/templates/post_details.html
@@ -3,7 +3,8 @@
     <title>Post Details</title>
 </head>
 <body>
-    <p>{{ post.title }} - published: {{ post.pub_date }}</p>
+    <h2>{{ post.title }} - published: {{ post.pub_date }}</h2>
     <p>{{ post.content }}</p>
+    <p><a href="{% url 'remove-post' post.id %}">Remove post</a></p>
 </body>
 </html>
