--- a/templates/post_details.html
+++ b/templates/post_details.html
@@ -6,5 +6,6 @@
     <h2>{{ post.title }} - published: {{ post.pub_date }}</h2>
     <p>{{ post.content }}</p>
     <p><a href="{% url 'remove-post' post.id %}">Remove post</a></p>
+    <p><a href="{% url 'edit-post' post.id %}">Edit post</a></p>
 </body>
 </html>
