--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -7,7 +7,7 @@
     {% for post in posts %}
         <h2><a href="{% url 'post-detail' post.id%}">{{ post.title }}</a></h2>
         <p>{{ post.content }}</p>
-        <p><a href="{% url 'remove-post' post.id %}">Remove post</a></p>
+        <p><a href="{% url 'remove-post' post.id %}">Remove post</a> | <a href="{% url 'edit-post' post.id %}">Edit post</a></p>
 
     {% endfor %}
 
